--- a/style.css
+++ b/style.css
@@ -191,6 +191,17 @@ h2 {
     border-radius: 73% 27% 44% 56% / 49% 44% 56% 51%;
 }
 
+.content input {
+    position: relative;
+    display: inline-block;
+    margin-top: 10px;
+    border: 2px solid #fff;
+    padding: 6px 18px;
+    text-decoration: none;
+    font-weight: 600;
+    border-radius: 73% 27% 44% 56% / 49% 44% 56% 51%;
+}
+
 .content a:hover {
     background: white;
     color: #333;
